# ml-pipeline-framework

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_predictions_local.csv
_data/: .gitkeep
config/: config.yaml
config/models/classification/: gradient_boosting.yaml  lightgbm.yaml  logistic_regression.yaml  random_forest.yaml  svm.yaml
config/models/regression/: lightgbm_regressor.yaml  linear_regression.yaml  random_forest_regressor.yaml
config/pipelines/: sampling_examples.yaml  universal_features.yaml
notebooks/: mlops_experiment_v2.ipynb
src/mlops/: run.py
src/mlops/components/: artifacts.py  optimization.py  pipeline.py  visualization.py
src/mlops/features/: __init__.py  custom_transformers.py  data_validator.py  domain.py  dtype_optimizer.py  engineering.py  preprocessing.py  selection.py  universal_transformers.py
src/mlops/utils/: __init__.py  cv_utils.py  data_loader.py  pipeline_utils.py
src/utils/: __init__.py  core_utils.py  cv_utils.py  data_utils.py  import_utils.py  pipeline_utils.py
tests/: test_dtype_optimizer.py
tests/fixtures/: test_data.py  test_utils.py
tests/integration/: test_mlops_pipeline.py
tests/unit/components/: __init__.py  test_artifacts.py  test_optimization.py  test_pipeline.py  test_visualization.py
tests/unit/features/: test_domain.py  test_engineering.py  test_preprocessing.py  test_selection.py
tests/unit/utils/: __init__.py  test_core_utils.py  test_cv_utils.py  test_data_loader.py  test_pipeline_utils.py
