[project]
name = "ml-ops-v2"
version = "0.1.0"
description = "MLOps platform with Hydra, MLflow, scikit-learn, and Optuna"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "hydra-core>=1.3.2",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "jupyter-runner>=2022.10.26.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "yellowbrick>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
